--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
           </span>
           <ul>
             <li><a href="#services">Services</a></li>
-            <li><a href="#portfolio">portfolio</a></li>
+            <li><a href="#portfolio">Portfolio</a></li>
             <li><a href="#about">About</a></li>
-            <li><a href="#contact">contact</a></li>
+            <li><a href="#contact">Contact</a></li>
           </ul>
         </div>
       </div>
